--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <meta charset="UTF-8">
+    <title>members only</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <% if (user) {%>
+      <h1>WELCOME BACK <%= user.username %></h1>
+      <a href="/log-out">LOG OUT</a>
+    <% } else { %>
+      <h1>please log in</h1>
+      <a href="/log-in">Log in</a>
+
+      <h1>OR create an account</h1>
+      <a href="/sign-up">Sign up</a>
+    <%}%>
   </body>
 </html>
