--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,16 +6,54 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <% if (locals.currentUser) {%>
-      <h1>WELCOME BACK <%= user.username %></h1>
-      <a href="/log-out">LOG OUT</a>
-      <a href="/secret-code">Become A Member!</a>
-    <% } else { %>
-      <h1>please log in</h1>
-      <a href="/log-in">Log in</a>
 
-      <h1>OR create an account</h1>
-      <a href="/sign-up">Sign up</a>
+    <% if (locals.currentUser) {%>
+      <header>
+        <h1>MembersOnly</h1>
+        <nav>
+          <a href="/secret-code"><button>Join Secret Club</button></a>
+          <a href="/create-message"><button>New Message</button></a>
+          <button class="userBtn"><%= locals.currentUser.username %></button>
+        </nav>
+      </header>
+      <div class="userModal">
+        <span><%= locals.currentUser.first_name + " " + locals.currentUser.last_name %></span>
+        <div class="membershipStatus">
+          <span>Membership Status: </span>
+          <% if (locals.currentUser.membership_status === true) {%>
+            <span>You're a Member!</span>  
+          <%} else {%>
+            <span>not a member</span>
+          <%} %>
+        </div>
+        <a href="/log-out"><button>Log out</button></a>
+      </div>
+
+    <% } else { %>
+      <header>
+        <h1>MembersOnly</h1>
+        <nav>
+          <a href="/log-in"><button>Log In</button></a>
+          <a href="/sign-up"><button>Sign Up</button></a>
+        </nav>
+      </header>
     <%}%>
+    <main>
+      <h2>Messages</h2>
+      <div class="messageGrid"></div>
+    </main>
+
+    <script>
+      const userBtn = document.querySelector(".userBtn")
+      const userModal = document.querySelector(".userModal")
+      const body = document.querySelector("body")
+      body.addEventListener("click", (e) => {
+        if (e.target === userBtn) {
+          userModal.style.display = "flex"
+        } else {
+          userModal.style.display = "none"
+        }})
+
+    </script>
   </body>
 </html>
