--- a/views/secret-code.ejs
+++ b/views/secret-code.ejs
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title></title>
 </head>
 <body>
+    <% if (locals.currentUser) {%>
+        <header>
+          <a href="/"><h1>MembersOnly</h1></a>
+          <nav>
+            <a href="/secret-code"><button>Join Secret Club</button></a>
+            <a href="/create-message"><button>New Message</button></a>
+            <button class="userBtn"><%= locals.currentUser.username %></button>
+          </nav>
+        </header>
+        <div class="userModal">
+          <span><%= locals.currentUser.first_name + " " + locals.currentUser.last_name %></span>
+          <div class="membershipStatus">
+            <span>Membership Status: </span>
+            <% if (locals.currentUser.membership_status === true) {%>
+              <span>You're a Member!</span>  
+            <%} else {%>
+              <span>not a member</span>
+            <%} %>
+          </div>
+          <a href="/log-out"><button>Log out</button></a>
+        </div>
+  
+      <% } else { %>
+        <header>
+          <a href="/"><h1>MembersOnly</h1></a>
+          <nav>
+            <a href="/log-in"><button>Log In</button></a>
+            <a href="/sign-up"><button>Sign Up</button></a>
+          </nav>
+        </header>
+      <%}%>
     <h1>Join the secret club</h1>
     <% if(locals.currentUser) {%>
         <h4>Hello <%= locals.currentUser.username %>, dont wait any longer and join the secret club. Enter the secret code below!</h4>
@@ -20,8 +52,19 @@
         </form>
     <%} else {%>
         <h3>Please log-in first!</h3>
-        <a href="/log-in">Log-in</a>
     <%} %>
 
+    <script>
+        const userBtn = document.querySelector(".userBtn")
+        const userModal = document.querySelector(".userModal")
+        const body = document.querySelector("body")
+        body.addEventListener("click", (e) => {
+          if (e.target === userBtn) {
+            userModal.style.display = "flex"
+          } else {
+            userModal.style.display = "none"
+          }})
+  
+    </script>
 </body>
 </html>
