add homepage styling

--- a/views/create-message.ejs
+++ b/views/create-message.ejs
@@ -13,7 +13,7 @@
           <a href="/"><h1>MembersOnly</h1></a>
           <nav>
             <a href="/secret-code"><button>Join Secret Club</button></a>
-            <a href="/create-message"><button>New Message</button></a>
+            <a href="/create-message"><button class="active">New Message</button></a>
             <button class="userBtn"><%= locals.currentUser.username %></button>
           </nav>
         </header>
