--- a/views/secret-code.ejs
+++ b/views/secret-code.ejs
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/secret-code.css">
     <title></title>
 </head>
-<body>
+<body> 
     <% if (locals.currentUser) {%>
         <header>
           <a href="/"><h1>MembersOnly</h1></a>
           <nav>
-            <a href="/secret-code"><button>Join Secret Club</button></a>
+            <a href="/secret-code"><button class="active">Join Secret Club</button></a>
             <a href="/create-message"><button>New Message</button></a>
             <button class="userBtn"><%= locals.currentUser.username %></button>
           </nav>
@@ -39,21 +40,30 @@
           </nav>
         </header>
       <%}%>
-    <h1>Join the secret club</h1>
-    <% if(locals.currentUser) {%>
-        <h4>Hello <%= locals.currentUser.username %>, dont wait any longer and join the secret club. Enter the secret code below!</h4>
-        <form action="" method="POST">
-            <label for="secretcode">Secret Code:</label>
-            <input type="text" name="secretcode" id="secretcode" placeholder="Secret Code">
-            <button>Submit</button>
-            <% if(error) {%>
-                <p>Wrong Code</p>    
-            <%}%>
-        </form>
-    <%} else {%>
-        <h3>Please log-in first!</h3>
-    <%} %>
-
+      <div class="main">
+        <h1>Join the secret club</h1>
+        <% if(locals.currentUser) {%>
+          <% if(locals.currentUser.membership_status === true) {%>
+           <h3>Congratulations!</h3>
+           <p>You're already a member of the club! No need to re-enter the secret code again.</p>
+          <%} else {%>
+            <div class="formDiv">
+              <h4>Hello <span class="userName"><%= locals.currentUser.username %></span>, dont wait any longer and join the secret club. Enter the secret code below!</h4>
+              <form action="" method="POST">
+                  <label for="secretcode">Secret Code:</label>
+                  <input type="text" name="secretcode" id="secretcode" placeholder="Secret Code">
+                  <% if(error) {%>
+                    <span class="errorMsg">Wrong Code</span>    
+                  <%}%>
+                  <button>Submit</button>
+  
+              </form>
+            </div>
+          <%} %>
+        <%} else {%>
+            <h3>Please log-in first!</h3>
+        <%} %>
+      </div>
     <script>
         const userBtn = document.querySelector(".userBtn")
         const userModal = document.querySelector(".userModal")
