--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
       <div class="userModal">
         <div class="userDiv">
           <span>Welcome back:</span>
-          <span class="username"><%= locals.currentUser.first_name + " " + locals.currentUser.last_name %></span>
+          <span class="username"><%= locals.currentUser.username %></span>
         </div>
         <div class="membershipStatus">
           <span>Membership Status: </span>
@@ -80,8 +80,10 @@
       body.addEventListener("click", (e) => {
         if (e.target === userBtn) {
           userModal.style.display = "flex"
+          userBtn.classList.add("active")
         } else {
           userModal.style.display = "none"
+          userBtn.classList.remove("active")
         }})
 
     </script>
