--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -4,22 +4,78 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/sign-up.css">
     <title></title>
 </head>
 <body>
+    <% if (locals.currentUser) {%>
+        <header>
+          <a href="/"><h1>MembersOnly</h1></a>
+          <nav>
+            <% if(locals.currentUser.membership_status !== true) {%>
+              <a href="/secret-code"><button>Join Secret Club</button></a>
+            <%} %>
+            <a href="/create-message"><button>New Message</button></a>
+            <button class="userBtn"><%= locals.currentUser.username %></button>
+          </nav>
+        </header>
+        <div class="userModal">
+          <div class="userDiv">
+            <span>Welcome back:</span>
+            <span class="username"><%= locals.currentUser.username %></span>
+          </div>
+          <div class="membershipStatus">
+            <span>Membership Status: </span>
+            <% if (locals.currentUser.membership_status === true) {%>
+              <span class="memberUser">You're a Member!</span>  
+            <%} else {%>
+              <span class="memberUser">not a member (yet)</span>
+            <%} %>
+          </div>
+          <div class="logOut">
+            <a href="/log-out"><button>Log out</button></a>
+          </div>
+        </div>
+  
+      <% } else { %>
+        <header>
+          <a href="/"><h1>MembersOnly</h1></a>
+          <nav>
+            <a href="/log-in"><button>Log In</button></a>
+            <a href="/sign-up"><button class="active">Sign Up</button></a>
+          </nav>
+        </header>
+      <%}%>
+
     <h1>Sign-up</h1>
-    <form action="" method="POST">
-        <label for="firstname">First Name</label>
-        <input type="text" name="firstname" id="firstname">
-        <label for="lastname">Last Name</label>
-        <input type="text" name="lastname" id="lastname">
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password">
-        <label for="confirmPassword">Confirm Password</label>
-        <input type="password" name="confirmPassword" id="confirmPassword">
-        <button>Sign Up</button>
-    </form>
+    <% if(locals.currentUser) {%>
+        <h3>You are already logged in dipshit. Stop snooping around my website :/</h3>    
+    <%} else {%>
+        <form action="" method="POST">
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" name="confirmPassword" id="confirmPassword">
+            <button>Sign Up</button>
+        </form>
+    <%} %>
+
+
+    <script>
+        const userBtn = document.querySelector(".userBtn")
+        const userModal = document.querySelector(".userModal")
+        const body = document.querySelector("body")
+        body.addEventListener("click", (e) => {
+          if (e.target === userBtn) {
+          userModal.style.display = "flex"
+          userBtn.classList.add("active")
+        } else {
+          userModal.style.display = "none"
+          userBtn.classList.remove("active")
+        }})
+    </script>
 </body>
 </html>
