--- a/views/secret-code.ejs
+++ b/views/secret-code.ejs
@@ -14,7 +14,7 @@
           <a href="/"><h1>MembersOnly</h1></a>
           <nav>
             <% if(locals.currentUser.membership_status !== true) {%>
-              <a href="/secret-code"><button>Join Secret Club</button></a>
+              <a href="/secret-code"><button class="active">Join Secret Club</button></a>
             <%} %>
             <a href="/create-message"><button>New Message</button></a>
             <button class="userBtn"><%= locals.currentUser.username %></button>
