--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -48,19 +48,23 @@
         </header>
       <%}%>
 
-    <h1>Sign-up</h1>
+      
     <% if(locals.currentUser) {%>
+        <h1>Signup</h1>
         <h3>You are already logged in dipshit. Stop snooping around my website :/</h3>    
     <%} else {%>
-        <form action="" method="POST">
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username">
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password">
-            <label for="confirmPassword">Confirm Password</label>
-            <input type="password" name="confirmPassword" id="confirmPassword">
-            <button>Sign Up</button>
-        </form>
+        <div class="signUp">
+        <h1>Signup</h1>
+            <form action="" method="POST">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" name="confirmPassword" id="confirmPassword">
+                <button>Sign Up</button>
+            </form>
+        </div>
     <%} %>
 
 
