--- a/public/stylesheets/secret-code.css
+++ b/public/stylesheets/secret-code.css
@@ -15,6 +15,9 @@
     border: 1px solid #10b981;
     border-radius: 20px;
 }
+.formDiv h1 {
+    color: #10b981;
+}
 .formDiv h4 {
     font-size: 22px;
     font-weight: 400;
@@ -33,6 +36,11 @@
 }
 form input {
     max-width: 250px;
+    outline: none;
+    padding: 5px;
+    padding-left: 0;
+    border: 0;
+    border-bottom: 1px solid #10b981;
 }
 form button {
     padding: 10px;
