--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,13 +59,13 @@
                     <span>On: <%= messages[i].date %></span>
                   </div>
                 <%} else {%>
-                  <div class="info">
-                    <span>Become a member to see the date & author</span>
+                  <div class="info italic">
+                    <span>*Become a member to see the date & author</span>
                   </div>
                 <%} %>
               <%} else {%>
-                <div class="info">
-                  <span>Log in & become a member to see the date & author</span>
+                <div class="info italic">
+                  <span>*Log in & become a member to see the date & author</span>
                 </div>
                 <%} %>
            </li>
