--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -161,5 +161,21 @@ li.messageCard > .info .userName {
     max-width: 500px;
   }
 }
+@media (max-width: 700px) {
+  header {
+    flex-direction: column;
+  }
+  .userModal {
+    top: 150px;
+  }
+  .messageGrid {
+    padding: 10px;
+  }
+}
+@media (max-width: 600px) {
+  .messageGrid li.messageCard {
+      max-width: 400px;
+  }
+}
 
 
